# ApiRustShawnTify

./: .env  .gitignore  Cargo.toml  build.rs  package-lock.json  package.json  rustc-ice-2024-11-18T17_40_12-11444.txt
apiRust/: package-lock.json  package.json
apiRust/src/: main.rs
src/: main.rs
src/database/: db.rs
src/models/: mod.rs  musique.rs
